# SeTok

./: README.md  cog.yaml  pyproject.toml
scripts/: extract_mm_projector.py  finetune.sh  merge_lora_weights.py  pretrain_mm_proj.sh  train_setok.sh
src/: __init__.py  constants.py  data_preprocess.py  mm_utils.py  utils.py
src/dataset/: __init__.py  base_dataset.py  dataset_utils.py  editDataset.py  instructDataset.py  pairDataset.py  vqa.py
src/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  make_delta.py  setokim_arch.py  utils.py
src/model/language_model/: setokim_llama.py
src/model/loss/: __init__.py  diffloss.py  discriminator.py  mse.py  multilabel_constrastive.py  perceptual.py  segmentation.py
src/model/multimodal_encoder/: builder.py  clip_encoder.py  eva_encoder.py  openclip_encoder.py  openclip_processor.py
src/model/multimodal_generator/: builder.py
src/model/multimodal_projector/: builder.py
src/model/setok/: __init__.py  clip_encoder.py  detokenizer.py  model.py  module.py  tokenizer.py  utils.py
src/train/: setok_trainer.py  setokim_trainer.py  train_mem.py  train_setok.py  train_setokim.py  train_xformers.py  training_utils.py
