[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "setok"
version = "0.0.0"
description = "Towards Semantic Equivalence of Tokenization in Multimodal LLM"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.2.1", "torchvision==0.17.1",
    "diffdist==0.1", "diffusers==0.27.2", "scipy==1.10.1",
    "transformers==4.46.3", "tokenizers==0.20.3", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.27.2", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.3.2",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.9.16",
]

[project.optional-dependencies]
train = ["deepspeed==0.13.6", "ninja", "wandb"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://llava-vl.github.io"
"Bug Tracker" = "https://github.com/haotian-liu/LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "scripts*", "tests*"]
